fix: fix modal title overflow

--- a/projects/overlays/src/components/modal/components/modal-layout-title/modal-layout-title.component.scss
+++ b/projects/overlays/src/components/modal/components/modal-layout-title/modal-layout-title.component.scss
@@ -11,5 +11,5 @@
 
 .pupa-content-wrapper {
   @include mixins.line-clamp(3);
-  word-break: break-all;
+  word-wrap: break-word;
 }
